--- a/package.json
+++ b/package.json
@@ -1,24 +1,36 @@
 {
-  "name": "hello-next",
-  "version": "1.0.0",
-  "description": "",
+  "name": "nextjs",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint",
+    "generate-prisma": "npx prisma generate",
+    "postinstall": "prisma generate"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
-    "next": "12.0.10",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-markdown": "8.0.0"
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.14",
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "4.13.0",
+    "eslint": "8.35.0",
+    "eslint-config-next": "13.2.4",
+    "framer-motion": "^10.9.1",
+    "next": "13.2.4",
+    "next-auth": "^4.21.1",
+    "openai": "^3.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "styled-component": "^2.8.0",
+    "swr": "^2.1.5",
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
-    "@types/node": "17.0.14",
-    "@types/react": "17.0.38",
-    "typescript": "4.5.5"
+    "@types/node": "18.15.9",
+    "@types/react": "18.0.29",
+    "prisma": "4.13.0",
+    "typescript": "5.0.2"
   }
 }
