add MUI and fix types

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
     "@next-auth/prisma-adapter": "^1.0.5",
@@ -23,7 +25,6 @@
     "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-component": "^2.8.0",
     "swr": "^2.1.5",
     "zustand": "^4.3.6"
   },
